[Templates] Activate and Reset Password Pages

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -25,6 +25,9 @@
     &::placeholder {
       color: rgba($value, .7);
     }
+    &:disabled {
+      color: $input-disabled-color;
+    }
     @include autofill($value, $input-bg);
   }
   .was-validated {
