--- a/src/scss/bundle.scss
+++ b/src/scss/bundle.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
+@import 'alerts';
 @import 'display';
 @import 'layout';
 @import 'fonts';
