--- a/theme/snippets/jumplink-shopping-cart-dropdown.liquid
+++ b/theme/snippets/jumplink-shopping-cart-dropdown.liquid
@@ -86,39 +86,8 @@
       </div>
 
       <form action="/cart" method="post">
-        <ul class="list-unstyled">
-          <li class="media mb-3" rv-each-item="cart.items">
 
-            <div class="img-wrapper mr-3">
-              <img class="img-fluid" rv-src="item.image" rv-alt="item.title">
-              <rv-icon class="m-2 cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="16" rv-on-click="remove | args item %item%"></rv-icon>
-            </div>
-            
-            <div class="media-body">
-              <p class="mb-1">
-                <a class="text-normal" rv-route="item.url">
-                  <strong rv-text="item.product_title"></strong>
-                </a>
-              </p>
-              <div class="options d-flex align-items-center">
-                <div class="mr-2 my-0 d-inline-block" rv-each-option="item.variant_options">
-                  {% comment %} color option {% endcomment %}
-                  <div rv-show="option | first | eq '#'" class="styleicon-circle option-color" rv-css-background-color="option" style="width: 12px; height: 12px;"></div>
-                  
-                  {% comment %} size or other option {% endcomment %}
-                  <div rv-hide="option | first | eq '#'" class="option-other" rv-text="option"></div>
-                  {% comment %} <small class="text-muted">Change</small> {% endcomment %}
-                </div>
-              </div>
-              <p class="my-1">
-                Quantity <span rv-text="item.quantity"></span>
-                <span class="px-1 text-muted" rv-on-click="decrease | args item %item%">-</span>
-                <span class="px-1 text-muted" rv-on-click="increase | args item %item%">+</span>
-              </p>
-              <p rv-text="item.price | money '{{ shop.money_format }}'"></p>
-            </div>
-          </li>
-        </ul>
+        {% include 'jumplink-shopping-cart-list-items' %}
 
         <div class="shopping-cart-dropdown-footer">
           <div rv-hide="cart.item_count | eq 0">
