--- a/theme/templates/customers/reset_password.liquid
+++ b/theme/templates/customers/reset_password.liquid
@@ -1,27 +1,71 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 text-center">
+<div class="container-fluid pt-5">
+  <div class="row pt-md-5">
+    <div class="col-12 col-md-10 offset-md-2">
+      <div class="row">
+        <div class="col-12">
+          <div class="form-vertical">
+            {% form 'reset_customer_password' %}
 
-      <div class="form-vertical">
-        {% form 'reset_customer_password' %}
+              <strong>{{ 'customer.reset_password.title' | t }}</strong>
 
-          <h1>{{ 'customer.reset_password.title' | t }}</h1>
+              <p>{{ 'customer.reset_password.subtext' | t: email: email }}</p>
 
-          <p>{{ 'customer.reset_password.subtext' | t: email: email }}</p>
+              {% comment %} Error and Successfull messages {% endcomment %}
+              {% if form.errors %}
+                {% assign formErrors = form.errors %}
+              {% endif %}
+              {% if form.posted_successfully? %}
+                {% assign formSuccessfully = 'Password successfully resetted' %}
+              {% endif %}
 
-          {{ form.errors | default_errors }}
+              <div class="form-group input-group mb-0">
+                <label for="ResetUsername" class="sr-only">Username</label>
+                <input
+                  type="text"
+                  name="customer[email]"
+                  id="ResetUsername"
+                  class="form-control form-control-text form-control-primary py-1"
+                  value="{{ email }}"
+                  autocomplete="username"
+                  disabled
+                >
+              </div>
 
-          <label for="ResetPassword" class="hidden-label">{{ 'customer.reset_password.password' | t }}</label>
-          <input type="password" value="" name="customer[password]" id="ResetPassword" class="input-full{% if form.errors contains 'password' %} error{% endif %}" placeholder="{{ 'customer.reset_password.password' | t }}">
+              <div class="form-group input-group mb-0">
+                <label for="ResetPassword" class="sr-only">{{ 'customer.reset_password.password' | t }}</label>
+                <input
+                  type="password"
+                  value=""
+                  name="customer[password]"
+                  id="ResetPassword"
+                  class="form-control form-control-text form-control-primary py-1 {% if form.errors contains 'password' %}is-invalid{% endif %}"
+                  placeholder="{{ 'customer.reset_password.password' | t }}"
+                  autocomplete="new-password"
+                  required
+                >
+              </div>
 
-          <label for="PasswordConfirmation" class="hidden-label">{{ 'customer.reset_password.password_confirm' | t }}</label>
-          <input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" class="input-full{% if form.errors contains 'password_confirmation' %} error{% endif %}" placeholder="{{ 'customer.reset_password.password_confirm' | t }}">
+              <div class="form-group input-group mb-5">
+                <label for="PasswordConfirmation" class="sr-only">{{ 'customer.reset_password.password_confirm' | t }}</label>
+                <input
+                  type="password"
+                  value=""
+                  name="customer[password_confirmation]"
+                  id="PasswordConfirmation"
+                  class="form-control form-control-text form-control-primary py-1 {% if form.errors contains 'password_confirmation' %}is-invalid{% endif %}"
+                  placeholder="{{ 'customer.reset_password.password_confirm' | t }}"
+                  autocomplete="new-password"
+                  required
+                >
+              </div>
 
-          <div class="text-center">
-            <input type="submit" class="btn btn--full" value="{{ 'customer.reset_password.submit' | t }}">
+              <button type="submit" class="btn btn-animated-underline-dark font-weight-bold px-0">
+                {{ 'customer.reset_password.submit' | t }}
+              </button>
+
+            {% endform %}
           </div>
-
-        {% endform %}
+        </div>
       </div>
     </div>
   </div>
