--- a/theme/templates/page.liquid
+++ b/theme/templates/page.liquid
@@ -1,15 +1,19 @@
 <div class="container-fluid pt-5">
   <div class="row pt-md-5">
-    {% unless page.title == blank %}
-      <div class="col-12 col-md-10 offset-md-2 text-left">
-        <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
-      </div>
-    {% endunless %}
+    <div class="col-12 col-md-10 offset-md-2">
+      <div class="row">
+        {% unless page.title == blank %}
+          <div class="col-12 text-left">
+            <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
+          </div>
+        {% endunless %}
 
-    {% unless page.content == blank %}
-        <div class="col-12 col-md-10 offset-md-2 rte">
-        {{ page.content }}
-        </div>
-    {% endunless %}
+        {% unless page.content == blank %}
+            <div class="col-12 col-md-10 offset-md-2 rte">
+            {{ page.content }}
+            </div>
+        {% endunless %}
+      </div>
+    </div>
   </div>
 </div>
