--- a/theme/snippets/jumplink-shopping-cart-dropdown.liquid
+++ b/theme/snippets/jumplink-shopping-cart-dropdown.liquid
@@ -1,128 +1,15 @@
-<rv-shopify-cart shipping-address='{{ customer.default_address | json }}' estimate-shipping-rate="false">
+{% assign estimateShippingRate = false %}
+{% assign showLoginHeader = true %}
+{% assign showCartPageLink = true %}
+
+<rv-shopify-cart shipping-address='{{ customer.default_address | json }}' estimate-shipping-rate="{{ estimateShippingRate }}">
   <div rv-if="cart" class="dropdown d-block">
     <a class="nav-link dropdown-toggle" data-offset="-100" rv-on-click="toggle" rv-route-class-active="'/cart'" href="#" role="button" id="dropdownMenuCart" aria-haspopup="true" aria-expanded="false">
       Shopping Bag <small class="ml-1 cart-item-count text-center" rv-text="cart.item_count"></small>
     </a>
     
     <div class="dropdown-menu p-3 scrollbar-primary " aria-labelledby="dropdownMenuCart">
-      
-      <div class="shopping-cart-dropdown-header">
-        {% if shop.customer_accounts_enabled %}
-          {% if customer %}
-            <div class="row">
-              <div class="col">
-                Hi {{ customer.first_name }}
-              </div>
-              <div class="col-auto">
-                <a href="/account/logout">Logout</a>
-              </div>
-            </div>
-            
-            <p></p>
-            <p>
-              <strong>
-                <a class="text-normal" rv-route="'/account'" rv-route-class-active="'/account'" href="/account">
-                  My Account
-                </a>
-              </strong>
-            </p>
-          {% else %}
-            <rv-shopify-login-form>
-              <p>
-                <strong>
-                  <a class="text-normal" rv-route="'/account'" rv-route-class-active="'/account'" href="/account">
-                    My Account
-                  </a>
-                </strong>
-                or
-                <a rv-route="'/account/register'" rv-route-class-active="'/account/register'" href="/account/register">
-                  register
-                </a>
-              </p>
-
-              {% comment %}
-                This form is used to recover the passwort and is hidden because
-                instead of have an seperate form in the frontend for this
-                we use the login form to get the email.
-              {% endcomment %}
-              <div hidden class="mb-3">
-                {% form 'recover_customer_password' %}
-                  {% include 'jumplink-form-inputs-customer-recover', idPrefix: 'dropdown_' %}
-                {% endform %}
-
-                <div class="col d-flex align-items-center justify-content-end">
-                  <button type="submit" class="btn btn-animated-underline-dark font-weight-bold" rv-on-click="recover">Recover</button>
-                </div>
-              </div>
-
-              {% comment %} 
-                We do not use { % form 'customer_login' % } here because
-                this form has an id we already have on the login / regist page
-              {% endcomment %}
-              <div>
-                <form method="post" action="/account/login" accept-charset="UTF-8">
-                  <input type="hidden" name="form_type" value="customer_login">
-                  <input type="hidden" name="utf8" value="✓">
-
-                  <div class="mb-3">
-                    {% include 'jumplink-form-inputs-customer-login', idPrefix: 'dropdown_' %}
-                  </div>
-                  <div class="row mb-2">
-                    <div class="col-auto d-flex align-items-center">
-                      <button class="btn btn-sm btn-link pl-0" rv-on-click="recover">
-                        Forgot Password?
-                      </button> 
-                    </div>
-                    <div class="col d-flex align-items-center justify-content-end">
-                      <button type="submit" class="btn btn-animated-underline-dark font-weight-bold" rv-on-click="login">Login</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </rv-shopify-login-form>
-
-          {% endif %}
-        {% endif %}
-      </div>
-
-      <form action="/cart" method="post">
-
-        {% include 'jumplink-shopping-cart-list-items' %}
-
-        <div class="shopping-cart-dropdown-footer">
-          <div rv-hide="cart.item_count | eq 0">
-            <div class="row mb-3">
-              <div class="col-auto d-flex flex-column justify-content-center">
-                <strong>
-                  <span rv-text="cart.item_count"></span>
-                  Items
-                </strong>
-                <p class="my-0" rv-text="cart.total_price | money '{{ shop.money_format }}'"></p>
-              </div>
-              <div class="col d-flex flex-column align-items-end justify-content-center">
-                <button type="submit" name="checkout" class="btn btn-animated-underline-dark font-weight-bold">Buy</button>
-              </div>
-            </div>
-
-            <p class="mb-0">
-              <strong>
-                <a class="text-normal" rv-route="'/cart'" rv-route-class-active="'/cart'" href="/cart" >View Shopping Bag</a>
-              </strong>
-            </p>
-          </div>
-
-          <div rv-show="cart.item_count | eq 0">
-            <div class="row" rv-show="cart.item_count | eq 0">
-              <div class="col-auto">
-                <strong>No Items yet</strong>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </form>
-
+      {% include 'jumplink-shopping-cart-body' with showLoginHeader, estimateShippingRate, showCartPageLink %}
     </div>
   </div>
 </rv-shopify-cart>
