--- a/theme/templates/customers/activate_account.liquid
+++ b/theme/templates/customers/activate_account.liquid
@@ -63,8 +63,10 @@
         </div>
 
         <div class="form-group input-group my-3">
-          <button type="submit" class="btn btn-animated-underline-dark font-weight-bold px-0" name="decline">
-            {{ 'customer.activate_account.cancel' | t }}
+          <button type="submit" class="btn btn-link px-0" name="decline">
+            <small>
+              {{ 'customer.activate_account.cancel' | t }}
+            </small>
           </button>
         </div>
       {% endform %}
