[Component:ShopifyCart] Autoclose Dropdown on view detail cart, [Component:Newsletter] Validate form on client, send subscribtion to mailchimp, mailchimp confirm and welcome page over the store itself

--- a/theme/snippets/jumplink-contact-form.liquid
+++ b/theme/snippets/jumplink-contact-form.liquid
@@ -35,7 +35,7 @@
   {% form 'contact' %}
     <div class="py-5">
 
-      <h2 class="h6 mb-3">Any questions? Fell free to contact us.</h2>
+      <h2 class="h6 mb-3">Any questions? Feel free to contact us.</h2>
 
       <p>
         Send us a message to <a href="mailto:info@myfassbender.com">info@myfassbender.com</a>
