--- a/theme/sections/newsletter.liquid
+++ b/theme/sections/newsletter.liquid
@@ -1,18 +1,85 @@
+
+{% assign idPrefix = section.settings.name | handleize %}
+
 {% capture name %}
-  <span class="text-primary" contenteditable="true" rv-value="name | default 'Name'" rv-on-focus="selectAll"></span>
+  <span
+    class="text-primary"
+    contenteditable="true"
+    rv-value="form.fields.name | default 'Name'"
+    rv-on-focus="selectAll"
+    autocorrect="off"
+    autocapitalize="off"
+    spellcheck="false"
+    autocomplete="name" {% comment %} seems to be not working on contenteditable {% endcomment %}
+  ></span>
 {% endcapture %}
 
 {% capture email %}
-  <span class="text-primary" contenteditable="true" rv-value="email | default 'E-Mail'" rv-on-focus="selectAll"></span>
+  <span
+    class="text-primary"
+    contenteditable="true"
+    rv-value="form.fields.email | default 'E-Mail'"
+    rv-on-focus="selectAll"
+    autocorrect="off"
+    autocapitalize="off"
+    spellcheck="false"
+    autocomplete="email" {% comment %} seems to be not working on contenteditable {% endcomment %}
+  ></span>
 {% endcapture %}
 
 {% if section.settings.enable %}
   <rv-newsletter class="d-block container-fluid text-center py-5" style="background-color:{{ section.settings.color }};">
-    <div class="py-5">
-      <h1 class="h6">{{ 'title' | t }}</h1>
-      <p>{{ 'content_html' | t: name: name, email: email }}</p>
+    <div class="row">
+      {% comment %} MailChimp Form {% endcomment %}
+      <form
+        action="{{ section.settings.subscrib_url }}"
+        method="post"
+        name="mc-embedded-subscribe-form"
+        class="col-12 mx-auto"
+        target="_blank"
+        novalidate
+      >
 
-      <a class="" href="#" rv-on-click="send">Subscribe</a>
+        <h1 class="h6">{{ 'title' | t }}</h1>
+        <p>{{ 'content_html' | t: name: name, email: email }}</p>
+
+        {% comment %} real people should not fill this in and expect good things - do not remove this or risk form bot signups {% endcomment %}
+        <input type="hidden" name="b_11ae6ea303b6ef3f1e7d5c7c6_65d09922c7" tabindex="-1" value="">
+
+        <label class="sr-only" for="mce-EMAIL">Name*</label>
+        <input hidden type="email" rv-value="form.fields.email" name="EMAIL" required id="{{ idPrefix }}_mce-EMAIL">
+
+        <label class="sr-only" for="mce-NAME">Name*</label>
+        <input hidden type="text" rv-value="form.fields.name" name="NAME" required id="{{ idPrefix }}_mce-NAME">
+
+        <div class="row text-left my-3">
+          <div class="col-auto mx-auto">
+            {% comment %} Marketing Permissions {% endcomment %}
+            <fieldset name="interestgroup_field">
+              {% comment %} Email {% endcomment %}
+              <small class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" name="gdpr[2201]" value="Y" required id="{{ idPrefix }}_gdpr_2201">
+                <label class="custom-control-label" for="{{ idPrefix }}_gdpr_2201">
+                  I would like to hear from you via email
+                </label>
+              </small> 
+            </fieldset>
+
+            <small class="custom-control custom-checkbox">
+              <input type="checkbox" class="custom-control-input" name="privacy" value="true" required id="{{ idPrefix }}_privacy">
+              <label class="custom-control-label" for="{{ idPrefix }}_privacy">
+                By signing up I agree to the <a href="/pages/legal-area">Privacy Statement</a>.
+              </label>
+            </small>
+          </div>
+        </div>
+
+        <p rv-hide="form.valid" class="text-danger small">
+          Please check your entry.
+        </p>
+
+        <input class="btn btn-link" type="submit" value="Subscribe" name="subscribe" class="button" rv-on-click="subscribe">
+      </form>
     </div>
   </rv-newsletter>
 {% endif %}
@@ -22,6 +89,12 @@
     "name": "Newsletter",
     "class": "newsletter",
     "settings": [
+      {
+        "type":      "text",
+        "id":        "name",
+        "label":     "Name",
+        "info": "Name must be unique and is used for internal newsletter form field distinction"
+      },
       {
         "type":      "checkbox",
         "id":        "enable",
@@ -33,7 +106,13 @@
         "id":        "color",
         "label":     "Color",
         "default":   "#F9DFD2"
-      }
+      },
+      {
+        "type": "url",
+        "id": "subscrib_url",
+        "label": "Subscribe URL",
+        "info": "This is the url the subscribe form will send to"
+      }      
     ],
     "blocks": [],
     "presets": [
