Component:DebugBar] New component to show (default hidden) preview bar

--- a/src/ts/components/_components.scss
+++ b/src/ts/components/_components.scss
@@ -7,3 +7,4 @@
 @import './newsletter/newsletter.component.scss';
 @import './instagram/instagram.component.scss';
 @import './instagram-scrollbar/instagram-scrollbar.component.scss';
+@import './debug-bar/debug-bar.component.scss';
