[Component:ProductListItem] Add to cart button and detail menu in product overview / collection

--- a/src/ts/components/_components.scss
+++ b/src/ts/components/_components.scss
@@ -3,6 +3,8 @@
 @import './shopify-cart/shopify-cart.component.scss';
 @import './shopify-cart-button/shopify-cart-button.component.scss';
 @import './shopify-login-form/shopify-login-form.component.scss';
+@import './shopify-product/shopify-product.component.scss';
+@import './shopify-product-item/shopify-product-item.component.scss';
 @import './icon/icon.component.scss';
 @import './newsletter/newsletter.component.scss';
 @import './instagram/instagram.component.scss';
