Blow cart dropdown background on supported browsers

--- a/src/scss/_dropdown.scss
+++ b/src/scss/_dropdown.scss
@@ -14,6 +14,11 @@
       color: $dropdown-link-active-color;
     }
   }
-  
 }
 
+.dropdown-menu {
+  backdrop-filter: blur(10px);
+  &.scrollbar-primary, .scrollbar-primary {
+    @include scrollbars(.5em, theme-color(primary), $dropdown-bg);
+  }
+}
