--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -568,7 +568,7 @@ $form-feedback-invalid-color:       theme-color("danger");
 $dropdown-min-width:                10rem;
 $dropdown-padding-y:                .5rem;
 $dropdown-spacer:                   .125rem;
-$dropdown-bg:                       $white;
+$dropdown-bg:                       rgba(255,255,255,0.8);
 $dropdown-border-color:             $pink;
 $dropdown-border-radius:            $border-radius;
 $dropdown-border-width:             $border-width;
