--- a/src/ts/components/debug-bar/debug-bar.component.scss
+++ b/src/ts/components/debug-bar/debug-bar.component.scss
@@ -10,7 +10,7 @@ rv-debug-bar {
 }
 
 #preview-bar-iframe {
-  display: none;
+  // display: none;
   // position: fixed;
   // bottom: 0px;
   // left: 0px;
