--- a/src/scss/templates/_footer.scss
+++ b/src/scss/templates/_footer.scss
@@ -32,7 +32,8 @@
 .fullscreen-menu {
   width: 100%;
   height: 100%;
-  background-color: rgba(255,255,255,0.8);
+  background-color: $dropdown-bg;
+  backdrop-filter: blur(10px);
   position: fixed;
   top: 0;
   left: 0;
