--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -1,16 +1,36 @@
 /**
- * Remove Autocomplete styles in Chrome
+ * Set custom Autocomplete background color in Chrome
+ * (not working with transparent background colors)
  */
-@mixin autofill($color, $bg-color) {
+@mixin autofill-color($color, $bg-color) {
   &:-webkit-autofill {
     -webkit-text-fill-color: $color;
     box-shadow: 0 0 0px 1000px $bg-color inset;
-    transition: none;
+    transition: none;   
     &:hover, 
     &:focus {
       -webkit-text-fill-color: $color;
       box-shadow: 0 0 0px 1000px $bg-color inset;
       transition: none;
+    }
+  }
+}
+
+/**
+ * Remove Autocomplete styles in Chrome
+ * with a trick that the autofill chrome default backgound-color is set after 5000 seconds
+ * (Also working with transparent background colors)
+ */
+ @mixin autofill($color) {
+  &:-webkit-autofill {
+    -webkit-text-fill-color: $color;
+    transition: background-color 5000s ease-in-out 0s;
+   
+    &:hover, 
+    &:focus {
+      -webkit-text-fill-color: $color;
+      transition: background-color 5000s ease-in-out 0s;
+     
     }
   }
 }
@@ -28,13 +48,13 @@
     &:disabled {
       color: $input-disabled-color;
     }
-    @include autofill($value, $input-bg);
+    @include autofill($value);
   }
   .was-validated {
     .form-control.form-control-#{$color} {
       &:invalid, &.is-invalid {
         color: $form-feedback-invalid-color;
-        @include autofill($form-feedback-invalid-color, $input-bg);
+        @include autofill($form-feedback-invalid-color);
         &::placeholder {
           color: $form-feedback-invalid-color;
         }
@@ -44,7 +64,7 @@
       }
       &:valid, &.is-valid {
         color: $form-feedback-valid-color;
-        @include autofill($form-feedback-valid-color, $input-bg);
+        @include autofill($form-feedback-valid-color);
         &::placeholder {
           color: $form-feedback-valid-color;
         }
@@ -60,7 +80,7 @@
  * Customization on bootstaps default form-control
  */
 .form-control {
-  @include autofill($input-color, $input-bg);
+  @include autofill($input-color);
 
   /**
    * Input without borders
@@ -70,7 +90,7 @@
     padding: 0;
     height: auto;
     background: transparent;
-    @include autofill($input-color, $input-bg);
+    @include autofill($input-color);
   }
 }
 
@@ -83,7 +103,7 @@
     &::placeholder {
       color: rgba($value, .7);
     }
-    @include autofill($value, $input-bg);
+    @include autofill($value);
   }
 }
 
@@ -91,7 +111,7 @@
  * Customization on bootstaps default custom-select
  */
  .custom-select {
-  @include autofill($input-color, $input-bg);
+  @include autofill($input-color);
 
   /**
    * Input without borders
